--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,7 +1,7 @@
 <div id="app container">
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search><h5><em>search</em> component goes here</h5></search>
+      <search handle-search="$ctrl.searchYoutube"></search>
     </div>
   </nav>
   <div class="row">
@@ -9,7 +9,7 @@
       <video-player video="$ctrl.currentVideo"></video-player>
     </div>
     <div class="col-md-5">
-      <video-list videos="$ctrl.videos"></video-list>
+      <video-list update-default="$ctrl.updateDefault" videos="$ctrl.videos"></video-list>
     </div>
   <div>
 </div>
