--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,7 +1,7 @@
 <div id="app container">
   <nav class="navbar">
     <div class="col-md-6 col-md-offset-3">
-      <search handle-search="$ctrl.searchYoutube"></search>
+      <search result="$ctrl.result"></search>
     </div>
   </nav>
   <div class="row">
@@ -9,7 +9,7 @@
       <video-player video="$ctrl.currentVideo"></video-player>
     </div>
     <div class="col-md-5">
-      <video-list update-default="$ctrl.updateDefault" videos="$ctrl.videos"></video-list>
+      <video-list on-click="$ctrl.onClick" videos="$ctrl.videos"></video-list>
     </div>
   <div>
 </div>
