--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,3 +1,3 @@
 <ul class="video-list">
-  <video-list-entry ng-repeat="video in $ctrl.videos" video='video' update-default="$ctrl.updateDefault"></video-list-entry>
+  <video-list-entry ng-repeat="video in $ctrl.videos" video='video' update-default="$ctrl.onClick"></video-list-entry>
 </ul>
