--- a/src/templates/videoList.html
+++ b/src/templates/videoList.html
@@ -1,3 +1,4 @@
-<ul class="video-list">
+<ul class="video-list">      
+  <h3 class="text-muted" style="padding-top: 20px; padding-bottom: 20px;"> Additional Videos </h3>
   <video-list-entry ng-repeat="video in $ctrl.videos" video='video' update-default="$ctrl.onClick"></video-list-entry>
 </ul>
