--- a/src/templates/videoPlayer.html
+++ b/src/templates/videoPlayer.html
@@ -8,5 +8,6 @@
   <div class="video-player-details">
     <h3>{{$ctrl.video.snippet.title}}</h3>
     <div>{{$ctrl.video.snippet.description}}</div>
+    <div class = "video-player-channel-title">Channel: {{$ctrl.videoDetails.snippet.channelTitle}}</div>
   </div>
 </div>
