--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ body {
 }
 
 .video-list {
+  margin: 50px 20px 0px 20px;
   background: #fff;
   padding: 8px;
   border: 0;
@@ -58,8 +59,9 @@ body {
 }
 
 .video-list-entry {
-  font-size: 16px;
-  padding: 8px;
+  background: #fff;
+  border: 0;
+  box-shadow: 0 1px 2px rgba(0,0,0,.1);
 }
 
 .video-list-entry-title {
