--- a/src/templates/chatterBox.html
+++ b/src/templates/chatterBox.html
@@ -6,10 +6,10 @@
       <option>Fill Me IN</option>
     </select>
   </div>
-  <div>
+  <div class="newMessage">
     New Message
   </div>
-  <div>
-    Messages
+  <div class='chatbox' >
+    <text-message ng-repeat="message in $ctrl.messages"></text-message>
   </div>
 </div>
