--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-5">
-      <chatter-box>Chatterbox Goes here </chatter-box>
+      <chatter-box chatter-box-messages="$ctrl.chatterBoxMessages">Chatterbox Goes here </chatter-box>
     </div>
   <div>
 </div>
