--- a/src/templates/textMessage.html
+++ b/src/templates/textMessage.html
@@ -1,3 +1,10 @@
-<div>
-  message
+<div style="padding: 10px" class="video-list-entry">
+  <div class="userName">
+    user:
+    {{$ctrl.messageData.username}}
+  </div>
+  <div class="message">
+    message:
+    {{$ctrl.messageData.text}}
+  </div>
 </div>
