--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,8 @@ body {
 .video-list-entry {
   background: #fff;
   border: 0;
-  box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  box-shadow: 0 1px 2px rgba(0,0,0,.3);
+  margin: 5px;
 }
 
 .video-list-entry-title {
